Add some spacing.

--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					Parse the code and generate test cases based on the above libraries. The goal isn't to cover every edge case or every case. The goal is to use static analysis to get the types, if possible and run the code in live environment testing the output and finding cases where code fails.
+					<p>Parse the code and generate test cases based on the above libraries. The goal isn't to cover every edge case or every case. The goal is to use static analysis to get the types, if possible and run the code in live environment testing the output and finding cases where code fails.</p>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="col-md-12">
-					This library is really just an experiment on the viability of parsing code and generating spec tests based on existing code. The other part of the experiment is whether it is possible to generate as much code from existing test cases when the actual code does not exist. If it is possible to generate test cases from existing code, then how well can actual code be generated from just test cases? The initial passes probably won't work well, but I think it will be a success if it generates a skeleton and does as much code generation as possible. Algorithm process code won't be possible, but the goal is to reduce the amount of code that needs to be written overall.
+					Kp>This library is really just an experiment on the viability of parsing code and generating spec tests based on existing code. The other part of the experiment is whether it is possible to generate as much code from existing test cases when the actual code does not exist. If it is possible to generate test cases from existing code, then how well can actual code be generated from just test cases? The initial passes probably won't work well, but I think it will be a success if it generates a skeleton and does as much code generation as possible. Algorithm process code won't be possible, but the goal is to reduce the amount of code that needs to be written overall.</p>
 				</div>
 			</div>
 
