--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					Kp>This library is really just an experiment on the viability of parsing code and generating spec tests based on existing code. The other part of the experiment is whether it is possible to generate as much code from existing test cases when the actual code does not exist. If it is possible to generate test cases from existing code, then how well can actual code be generated from just test cases? The initial passes probably won't work well, but I think it will be a success if it generates a skeleton and does as much code generation as possible. Algorithm process code won't be possible, but the goal is to reduce the amount of code that needs to be written overall.</p>
+					<p>This library is really just an experiment on the viability of parsing code and generating spec tests based on existing code. The other part of the experiment is whether it is possible to generate as much code from existing test cases when the actual code does not exist. If it is possible to generate test cases from existing code, then how well can actual code be generated from just test cases? The initial passes probably won't work well, but I think it will be a success if it generates a skeleton and does as much code generation as possible. Algorithm process code won't be possible, but the goal is to reduce the amount of code that needs to be written overall.</p>
 				</div>
 			</div>
 
